samples/_failures_safe/1761042069_3f865d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2e6d7c2.c: In function ‘main’:
./samples/SAFE/__tmp_d2e6d7c2.c:179:9: error: expected expression at end of input
  179 |         if (tokens[k].type ==
      |         ^~
./samples/SAFE/__tmp_d2e6d7c2.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2e6d7c2.c:179:9: error: expected declaration or statement at end of input
